# apertium-cat

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Jenkinsfile  Makefile.am  README  apertium-cat.cat.acx  apertium-cat.cat.dix  apertium-cat.cat.pre2017_prefs.rlx  apertium-cat.cat.prefs.rlx  apertium-cat.cat.rlx  apertium-cat.cat.tsx  apertium-cat.cat_valencia.prefs.rlx  apertium-cat.cat_valencia_gva.prefs.rlx  apertium-cat.cat_valencia_uni.prefs.rlx  apertium-cat.pc.in  apertium-cat.post-cat.dix  apertium-cat.post-diacritics-nous.dix  apertium-cat.post-diacritics-vells.dix  cat.preferences.xml  cat.prob  cat.supervised.make  configure.ac  configure~  convert-metadix-dix.py  genvdix.py  greptests.txt  modes.xml  tagger.supervised.make  tagger.unsupervised.make
.github/workflows/: build.yml
corpus/: corpus_ca_wp20000.txt  corpus_ca_wp5000.txt
dev/: canvis-ortografia-iec2017.txt  greptests.txt  test-grep.sh  variants.ods
tagger-data/: README.md  README_cat.md
tagger-data/crp/: exemple.txt
tagger-data/tagged/: arquitectura_barcelona.tagged  els_cinc_secrets.tagged  miscellaneous.tagged
test/: analysis-disam-expected.txt  analysis-input.txt  analysis-morph-expected.txt  analysis-tagger-expected.txt  analysis-tagger-gold.txt  grep-all-expected.txt  test-grep.sh  tests.json
texts/: arquitectura_barcelona.tagged.txt  els_cinc_secrets.raw.txt  miscellaneous.tagged  miscellaneous.tagged.txt
